src/styles/game.css
.game-container {
    position: relative;
    width: min(90vw, 100vh) !important;
    aspect-ratio: 2 / 1;
    max-height: 50vh;
    background-color: var(--accent-bg-color);
    border: var(--border);
    border-radius: var(--border-radius);
}

.player {
    position: absolute;
    top: 50%;
    left: 25%;
    width: 10%;
    aspect-ratio: 2 / 1;
    transform: rotate(0deg);
    margin: 0;
    padding: 0;
}

.obstacle {
    position: absolute;
    top: -25%;
    left: 50%;
    width: 5%;
    height: 150%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}

.obstacle img {
    width: 100%;
    height: 37.5%;
}

